Fixed wrong width size in sign in form

--- a/app/components/auth/signIn/signIn.scss
+++ b/app/components/auth/signIn/signIn.scss
@@ -62,10 +62,6 @@
 }
 
 @media (max-width: $mobile_width) {
-  .authFormWrapper {
-    width: 100%;
-  }
-
   .fbIconWrapper {
     display: none;
   }
